# paper-implementations

./: .gitignore  readme.org
vision/: Dockerfile  pyproject.toml
vision/experiments/: details.json
vision/models/: alexnet.py  googlenet.py  resnet.py  vgg.py
vision/src/: train.py
vision/utils/: experiment_committer.py  logger.py
