[tool.poetry]
name = "vision"
version = "0.1.0"
description = ""
authors = ["000namc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "1"
albumentations = "^1.4.18"
torchvision = "^0.19.1"
torch = "^2.4.1"
timm = "^1.0.10"
wandb = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
